--- a/pom.xml
+++ b/pom.xml
@@ -72,14 +72,13 @@
             <url>https://opensource.org/licenses/MIT</url>
         </license>
     </licenses>
-    <!-- If you want this to appear on the plugin site page:
     <developers>
       <developer>
-        <id>bhacker</id>
-        <name>Bob Q. Hacker</name>
-        <email>bhacker@nowhere.net</email>
+        <id>dnuevo</id>
+        <name>Dario Nuevo</name>
+        <email>no-email@spamassassin.net</email>
       </developer>
-    </developers> -->
+    </developers>
 
     <scm>
         <connection>scm:git:git://github.com/${gitHubRepo}.git</connection>
