--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   </parent>
   <groupId>io.jenkins.plugins</groupId>
   <artifactId>jwt-auth</artifactId>
-  <version>0.2.0</version>
+  <version>0.3.0-SNAPSHOT</version>
   <packaging>hpi</packaging>
   <properties>
     <revision>0.1.0</revision>
