--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
         </exclusion>
       </exclusions>
     </dependency>
+    <dependency>
+      <groupId>org.jenkins-ci.plugins</groupId>
+      <artifactId>mailer</artifactId>
+      <version>1.34</version>
+    </dependency>
     <!-- end our own deps -->
 
     <!-- our own test deps -->
@@ -106,6 +111,11 @@
           <artifactId>*</artifactId>
         </exclusion>
       </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.jenkins-ci.main</groupId>
+      <artifactId>jenkins-test-harness</artifactId>
+      <version>1589.vc23fca066d5c</version>
     </dependency>
     <!-- end own test deps -->
 
