--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>4.16</version>
+    <version>4.25</version>
     <relativePath/>
   </parent>
   <groupId>io.jenkins.plugins</groupId>
@@ -32,7 +32,7 @@
         <!-- Pick up common dependencies for the selected LTS line: https://github.com/jenkinsci/bom#usage -->
         <groupId>io.jenkins.tools.bom</groupId>
         <artifactId>bom-2.303.x</artifactId>
-        <version>937.v51fde92016ed</version>
+        <version>950.v396cb834de1e</version>
         <scope>import</scope>
         <type>pom</type>
       </dependency>
@@ -48,7 +48,7 @@
     <dependency>
       <groupId>org.bitbucket.b_c</groupId>
       <artifactId>jose4j</artifactId>
-      <version>0.8.0</version>
+      <version>0.9.0</version>
       <exclusions>
         <exclusion>
           <groupId>org.slf4j</groupId>
@@ -62,7 +62,7 @@
     <dependency>
       <groupId>com.github.tomakehurst</groupId>
       <artifactId>wiremock-jre8</artifactId>
-      <version>2.30.1</version>
+      <version>2.31.0</version>
       <scope>test</scope>
       <exclusions>
         <exclusion>
