--- a/src/test/resources/configuration-as-code.yml
+++ b/src/test/resources/configuration-as-code.yml
@@ -10,3 +10,5 @@ jenkins:
       jwksUrl: http://jwks-host/.well-known/openid
       leewaySeconds: 3
       allowVerificationFailures: true
+      emailClaimName: email
+      fullNameClaim: name
