--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,9 @@
     <changelist>-SNAPSHOT</changelist>
 
     <!-- Baseline Jenkins version you use to build the plugin. Users must have this version or newer to run. -->
-    <jenkins.version>2.303.1</jenkins.version>
-    <java.level>8</java.level>
+    <jenkins.version>2.332.4</jenkins.version>
+
     <gitHubRepo>jenkinsci/${project.artifactId}-plugin</gitHubRepo>
-    <configuration-as-code.version>1.55.1</configuration-as-code.version>
   </properties>
   <name>JWT Auth Plugin</name>
   <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
@@ -29,15 +28,15 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <!-- Pick up common dependencies for the selected LTS line: https://github.com/jenkinsci/bom#usage -->
         <groupId>io.jenkins.tools.bom</groupId>
-        <artifactId>bom-2.303.x</artifactId>
-        <version>937.v51fde92016ed</version>
-        <scope>import</scope>
+        <artifactId>bom-2.332.x</artifactId>
+        <version>1607.va_c1576527071</version>
         <type>pom</type>
+        <scope>import</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
+
   <dependencies>
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
@@ -59,7 +58,6 @@
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>mailer</artifactId>
-      <version>1.34</version>
     </dependency>
     <!-- end our own deps -->
 
@@ -112,12 +110,6 @@
         </exclusion>
       </exclusions>
     </dependency>
-    <dependency>
-      <groupId>org.jenkins-ci.main</groupId>
-      <artifactId>jenkins-test-harness</artifactId>
-      <version>1589.vc23fca066d5c</version>
-      <scope>test</scope>
-    </dependency>
     <!-- end own test deps -->
 
     <dependency>
@@ -138,6 +130,11 @@
     <dependency>
       <groupId>org.jenkins-ci.plugins.workflow</groupId>
       <artifactId>workflow-durable-task-step</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jenkins-ci.main</groupId>
+      <artifactId>jenkins-test-harness</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
