Allow loginUrl override for JWT
When using JWT, allow the setting of the login URL so that it
can point at the source of login for the JWT token.

--- a/src/test/resources/configuration-as-code.yml
+++ b/src/test/resources/configuration-as-code.yml
@@ -12,3 +12,4 @@ jenkins:
       allowVerificationFailures: true
       emailClaimName: email
       fullNameClaim: name
+      loginUrl: http://jwks-host/login
